<resources>
    <array name="screen_aray">

    </array>
    <string name="app_name">moneytracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="proceeds">Траты</string>
    <string name="warning_null">Пустые поля</string>
    <string name="warning_no_integer">В поле сумма не числовое значение</string>
    <string name="statistics_text">тут будет статистика</string>
    <string name="categores">Категории</string>
    <string name="statistics">Статистика</string>
    <string name="transactions">Траты</string>
    <string name="add_transaction">Добавление новой траты</string>
    <string name="add_text">Добавить</string>
    <string name="add_activity_title_name">Короткое название</string>
    <string name="add_activity_sum_name">Сумма</string>
    <string name="context_bar_delete">Delete</string>
    <string name="dialog_edit1_hint">Одежда</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="hint_price_example">300.0</string>
    <string name="hint_title_example">ВОЙНА И МИР</string>
    <string name="hint_category_exemple">МАГАЗИН</string>
    <string name="warning_no_categories">ВНАЧАЛЕ СОЗДАЙТЕ КАТЕГОРИИ</string>
    <string name="search">search</string>
    <string name="warning_sql">Нельзя удалить, есть транзакции даннной категории</string>
    <string name="add">Поступления</string>
    <string name="comment">Подробное описание</string>
    <string name="hint_category_place_exemple">зарплатная карточка</string>
    <string name="cash">cash</string>
    <string name="add_preceed">Добавление нового поступления</string>
    <string name="transfer_from">Перевести c данного источника</string>
    <string name="transfer_to">Перевести на данный источник</string>
    <string name="dialog_transfer_question">Хотите сделать перевод средств между вашими местами хранения?</string>
    <string name="transfer_title">Переводим</string>
    <string name="byn">BYN</string>
    <string name="to">C </string>
    <string name="from">На </string>
    <string name="warning_no_cash">недостаточно средств</string>
    <string name="alarm_message">а ты заполнил бюджет??</string>
    <string name="notifaction_text">Вы сегодня заполняли свои расходы и дjходы??</string>
    <string name="notification_title">Напоминание</string>
    <string name="sign_in">Авторизация</string>
    <string name="sign_radio_1_text">личный бюджет</string>
    <string name="sign_radio_2_text">семейный бюджет</string>
    <string name="family_budget">Семейный бюджет</string>
    <string name="family_question">Создать новый семейный бюджет или присоединиться к существующему (необходимо знать пароль)</string>
    <string name="family_create_new">СОЗДАТЬ НОВЫЙ</string>
    <string name="family_add">ПРИСОЕДИНИТЬСЯ</string>
    <string name="family_create_title">Создание нового семейного бюджета</string>
    <string name="family_example">Чагарины</string>
    <string name="famile_name_title">Название Вашей семьи</string>
    <string name="famile_password_title">Пароль</string>
    <string name="chat">Чат</string>
    <string name="transfer">Переводы</string>
    <string name="icon">icon</string>
    <string name="dialog_title">Хотите изменить запись</string>
    <string name="agree">ИЗМЕНИТЬ</string>
    <string name="disagree">ОСТАВИТЬ</string>
    <string name="save">Сохранить</string>
    <string name="dont_save">Отмена</string>
    <string name="change_transacton_title">Редактирование записи</string>
    <string name="string_change">Редактирование</string>
    <string name="title">Заголовок</string>
    <string name="transaction_category">Категория траты</string>
    <string name="places_category">Источник платежа</string>
    <string name="date">Дата</string>
    <string name="_300">300</string>
    <string name="category_proceed">Источник поступления</string>
    <string name="category_place">Средства поступили на</string>
    <string name="delet_dialog">Желаете удалить элемент?</string>
    <string name="add_categores">Добавление категории</string>
    <string name="chose_content">Выбирите тип</string>
    <string name="input_content">Укажите название</string>
    <string name="category_change_warning">Можно изменить имя категории, но старайтесь глобально не менять логику данной категории, т.к. возможно уже есть сохранённые действия с данной категорией</string>
    <string name="category_change">Изменение категории</string>
    <string name="category_change_content">откорректируйте название</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_persistent_compact_header">херня</string>
    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
    <string name="isShow">Показывть копилки?</string>
    <string name="copilka">копилка?</string>
    <string name="swich">Показ копилок</string>
    <string name="color_dialog">Настройка цвета</string>
    <string name="color_palette">Палитра</string>
    <string name="colors">Цвета</string>
    <string name="transaction_categores">Категории трат</string>
    <string name="categores_proceed">Источники поступления</string>
    <string name="places_categores">Категории места хранения</string>
</resources>
