<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingBottom="@dimen/dialog_bottom"
    android:paddingLeft="@dimen/dialog_padding"
    android:paddingRight="@dimen/dialog_padding"
    android:paddingTop="@dimen/dialog_padding">

    <TextView
        android:id="@+id/title"
        android:layout_marginBottom="@dimen/dialog_transfer_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_text_size"
        android:textColor="@color/green"
        android:text="@string/family_create_title" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_transfer_delimitr_size"
        android:background="@color/green"
        android:layout_marginBottom="@dimen/dialog_transfer_padding" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="@dimen/dialog_transfer_question"
        android:text="@string/famile_name_title" />

    <EditText
        android:layout_marginBottom="@dimen/dialog_transfer_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_name"
        android:hint="@string/family_example" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="@dimen/dialog_transfer_question"
        android:text="@string/famile_password_title" />

    <EditText
        android:layout_marginBottom="@dimen/dialog_transfer_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_password"
        android:inputType="textPassword" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/ok_button"
            android:text="@string/ok_button"
            android:textColor="@color/button_color"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:enabled="true"
            android:background="@color/background" />

        <Button
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:text="@string/cancel_button"
            android:textColor="@color/button_color"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:enabled="true"
            android:background="@color/background" />

    </RelativeLayout>
</LinearLayout>