<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Container">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/sign_top_margin"
        android:text="@string/sign_in" />

    <RadioGroup
        android:id="@+id/sign_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_top_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sign_radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_radio_1_text"
            android:checked="true" />

        <RadioButton
            android:id="@+id/sign_radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_radio_2_text" />
    </RadioGroup>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_marginTop="@dimen/sign_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_gravity="center" />

</LinearLayout>