<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingBottom="@dimen/dialog_bottom"
    android:paddingLeft="@dimen/dialog_padding"
    android:paddingRight="@dimen/dialog_padding"
    android:paddingTop="@dimen/dialog_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="@dimen/dialog_text_size"
        android:textColor="@color/green" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text"
        android:hint="@string/dialog_edit1_hint" />

    <Spinner
        android:id="@+id/spinner"
        android:textSize="20dp"
        android:spinnerMode="dialog"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"></Spinner>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/ok_button"
            android:text="@string/ok_button"
            android:textColor="@color/button_color"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:background="@color/background" />

        <Button
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:text="@string/cancel_button"
            android:textColor="@color/button_color"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:background="@color/background" />

    </RelativeLayout>
</LinearLayout>