<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Container.AddBackground"
    android:baselineAligned="false">

    <include layout="@layout/toolbar" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:background="@color/background">

        <TextView
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:textSize="20dp"
            android:text="@string/add_activity_sum_name" />

        <EditText
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:id="@+id/sum"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:inputType="numberDecimal"
            android:hint="300"
            android:textSize="@dimen/add_transaction_text_size" />

        <TextView
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:paddingRight="10dp"
            android:text="@string/add_activity_title_name"
            android:textSize="@dimen/add_transaction_text_size" />

        <EditText
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:id="@+id/title"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:hint="Война и мир"
            android:textSize="@dimen/add_transaction_text_size" />

        <TextView
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="Категория траты"
            android:textSize="@dimen/add_transaction_text_size" />

        <Spinner
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:id="@+id/spinner_transaction"
            android:textSize="@dimen/add_transaction_text_size"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="Источник платежа"
            android:textSize="@dimen/add_transaction_text_size" />

        <Spinner
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:id="@+id/spinner_place"
            android:textSize="@dimen/add_transaction_text_size"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="Дата"
            android:textSize="@dimen/add_transaction_text_size" />

        <TextView
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:textSize="@dimen/add_transaction_text_size" />

        <EditText
            android:layout_marginBottom="@dimen/add_transactions_padding"
            android:id="@+id/comment"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:layout_columnSpan="2"
            android:hint="@string/comment"
            android:textSize="@dimen/add_transaction_text_size" />

    </GridLayout>

    <Button
        android:layout_marginBottom="@dimen/add_transactions_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        android:onClick="onClick"
        android:id="@+id/add_button"
        android:clickable="true"
        android:enabled="true"
        android:textSize="@dimen/add_transaction_text_size" />

</LinearLayout>